--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
       </li>
     </ul>
-    <!-- <div class="copyright">更多模板关注公众号"DreamCoders"免费获取</div> -->
+    <div class="copyright">中国人民大学国家治理大数据和人工智能创新平台健康与医改政策子实验室</div>
   </div>
 
   <div class="mainbox2">
