Remove the PolicyTree

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <a href="javascript:void(0)" class="active">健康中国政策体系</a>
             </div>
           </div>
-          <div class="boxnav" id="policyTree"></div>
+          <!-- <div class="boxnav" id="policyTree"></div> -->
           <div class="boxfoot"></div>
         </div>
 
@@ -833,7 +833,7 @@
     window.switchActionView = switchActionView;
   </script>
 
-  <script>
+  <!-- <script>
     // 政策树图表初始化
     var policyTreeChart = null;
 
@@ -937,7 +937,7 @@
         }
       });
     });
-  </script>
+  </script> -->
 
   <script>
     var networkChart = null;
