Add template of Evaluation

--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
             </div>
           </div>
           <!-- <div class="boxnav" id="policyTree"></div> -->
+          <div class="boxnav">
+            <ul class="btbox">
+              <li id="bt01"></li>
+              <li id="bt02"></li>
+              <li id="bt03"></li>
+              <li id="bt04"></li>
+            </ul>
+          </div>
           <div class="boxfoot"></div>
         </div>
 
