--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <a href="javascript:void(0)" class="active" onclick="switchView('健康中国建设发展指数')">健康中国建设发展指数</a>
               <a href="javascript:void(0)" onclick="switchView('政策数量')">政策数量</a>
               <a href="javascript:void(0)" onclick="switchView('政策质量')">政策质量</a>
-              <a href="javascript:void(0)" onclick="switchView('协同机制')">协同机制</a>
+              <a href="javascript:void(0)" onclick="switchView('政策网络')">政策网络</a>
             </div>
           </div>
           <div class="boxnav" id="echart4" style="width: 100%; height: 200px;"></div>
@@ -215,14 +215,14 @@
 
     // 数据定义 - 确保包含所有年份
     var data = [
-      { "年份": "2016年", "健康中国建设发展测度指数": 41.9978584275, "政策数量": 24.2529053219, "政策质量": 49.548572971, "协同机制": 59.8673247292, "防控重大疾病": 13, "全方位干预健康影响因素": 36, "维护全生命周期健康": 16, "当年完成率": 25.6661991585, "总体完成率": 91.0939691445, "平均完成月数": 31.9817036354, "发文联合率": 28, "平均协作规模": 2.5066666667, "参与部门": 45 },
-      { "年份": "2017年", "健康中国建设发展测度指数": 39.1809892548, "政策数量": 28.0691106009, "政策质量": 61.1064357826, "协同机制": 44.9190013932, "防控重大疾病": 17, "全方位干预健康影响因素": 41, "维护全生命周期健康": 15, "当年完成率": 40.252454418, "总体完成率": 90.7433380084, "平均完成月数": 25.4508338657, "发文联合率": 27.9069767442, "平均协作规模": 1.8372093023, "参与部门": 36 },
-      { "年份": "2018年", "健康中国建设发展测度指数": 44.569907586, "政策数量": 30.1833758144, "政策质量": 61.1064357826, "协同机制": 56.5327288563, "防控重大疾病": 17, "全方位干预健康影响因素": 46, "维护全生命周期健康": 17, "当年完成率": 40.252454418, "总体完成率": 90.7433380084, "平均完成月数": 25.4508338657, "发文联合率": 34.7826086957, "平均协作规模": 1.9891304348, "参与部门": 48 },
-      { "年份": "2019年", "健康中国建设发展测度指数": 58.1998540941, "政策数量": 54.1496466337, "政策质量": 61.3240866555, "协同机制": 64.3206112561, "防控重大疾病": 33, "全方位干预健康影响因素": 58, "维护全生命周期健康": 49, "当年完成率": 43.9759036145, "总体完成率": 77.7108433735, "平均完成月数": 14.976744186, "发文联合率": 30, "平均协作规模": 2.34375, "参与部门": 59 },
-      { "年份": "2020年", "健康中国建设发展测度指数": 71.8425803002, "政策数量": 93.0057470726, "政策质量": 73.8645356701, "协同机制": 57.8925584476, "防控重大疾病": 75, "全方位干预健康影响因素": 73, "维护全生命周期健康": 71, "当年完成率": 59.2760180995, "总体完成率": 80.5429864253, "平均完成月数": 11.191011236, "发文联合率": 30.303030303, "平均协作规模": 1.8917748918, "参与部门": 61 },
-      { "年份": "2021年", "健康中国建设发展测度指数": 67.3875817514, "政策数量": 73.8936942405, "政策质量": 84.9304809287, "协同机制": 61.9930132046, "防控重大疾病": 43, "全方位干预健康影响因素": 67, "维护全生命周期健康": 83, "当年完成率": 65.1515151515, "总体完成率": 96.9696969697, "平均完成月数": 9.84375, "发文联合率": 29.8165137615, "平均协作规模": 2.1055045872, "参与部门": 63 },
-      { "年份": "2022年", "健康中国建设发展测度指数": 68.0808548686, "政策数量": 75.4343704986, "政策质量": 92.5848505098, "协同机制": 62.1521907227, "防控重大疾病": 39, "全方位干预健康影响因素": 84, "维护全生命周期健康": 80, "当年完成率": 77.9411764706, "总体完成率": 92.6470588235, "平均完成月数": 6.9841269841, "发文联合率": 32.2033898305, "平均协作规模": 2.1610169492, "参与部门": 58 },
-      { "年份": "2023年", "健康中国建设发展测度指数": 81.5569409048, "政策数量": 81.9258155176, "政策质量": 97.3474325483, "协同机制": 77.4844711643, "防控重大疾病": 59, "方位干预健康影响因素": 68, "维护生命周期健康": 74, "当年完成率": 84.0579710145, "总体完成率": 92.7536231884, "平均完成月数": 4.890625, "发文联合率": 41.5637860082, "平均协作规模": 2.658436214, "参与部门": 62 }
+      { "年份": "2016年", "健康中国建设发展测度指数": 41.9978584275, "政策数量": 24.2529053219, "政策质量": 49.548572971, "政策网络": 59.8673247292, "防控重大疾病": 13, "全方位干预健康影响因素": 36, "维护全生命周期健康": 16, "当年完成率": 25.6661991585, "总体完成率": 91.0939691445, "平均完成月数": 31.9817036354, "发文联合率": 28, "平均协作规模": 2.5066666667, "参与部门": 45 },
+      { "年份": "2017年", "健康中国建设发展测度指数": 39.1809892548, "政策数量": 28.0691106009, "政策质量": 61.1064357826, "政策网络": 44.9190013932, "防控重大疾病": 17, "全方位干预健康影响因素": 41, "维护全生命周期健康": 15, "当年完成率": 40.252454418, "总体完成率": 90.7433380084, "平均完成月数": 25.4508338657, "发文联合率": 27.9069767442, "平均协作规模": 1.8372093023, "参与部门": 36 },
+      { "年份": "2018年", "健康中国建设发展测度指数": 44.569907586, "政策数量": 30.1833758144, "政策质量": 61.1064357826, "政策网络": 56.5327288563, "防控重大疾病": 17, "全方位干预健康影响因素": 46, "维护全生命周期健康": 17, "当年完成率": 40.252454418, "总体完成率": 90.7433380084, "平均完成月数": 25.4508338657, "发文联合率": 34.7826086957, "平均协作规模": 1.9891304348, "参与部门": 48 },
+      { "年份": "2019年", "健康中国建设发展测度指数": 58.1998540941, "政策数量": 54.1496466337, "政策质量": 61.3240866555, "政策网络": 64.3206112561, "防控重大疾病": 33, "全方位干预健康影响因素": 58, "维护全生命周期健康": 49, "当年完成率": 43.9759036145, "总体完成率": 77.7108433735, "平均完成月数": 14.976744186, "发文联合率": 30, "平均协作规模": 2.34375, "参与部门": 59 },
+      { "年份": "2020年", "健康中国建设发展测度指数": 71.8425803002, "政策数量": 93.0057470726, "政策质量": 73.8645356701, "政策网络": 57.8925584476, "防控重大疾病": 75, "全方位干预健康影响因素": 73, "维护全生命周期健康": 71, "当年完成率": 59.2760180995, "总体完成率": 80.5429864253, "平均完成月数": 11.191011236, "发文联合率": 30.303030303, "平均协作规模": 1.8917748918, "参与部门": 61 },
+      { "年份": "2021年", "健康中国建设发展测度指数": 67.3875817514, "政策数量": 73.8936942405, "政策质量": 84.9304809287, "政策网络": 61.9930132046, "防控重大疾病": 43, "全方位干预健康影响因素": 67, "维护全生命周期健康": 83, "当年完成率": 65.1515151515, "总体完成率": 96.9696969697, "平均完成月数": 9.84375, "发文联合率": 29.8165137615, "平均协作规模": 2.1055045872, "参与部门": 63 },
+      { "年份": "2022年", "健康中国建设发展测度指数": 68.0808548686, "政策数量": 75.4343704986, "政策质量": 92.5848505098, "政策网络": 62.1521907227, "防控重大疾病": 39, "全方位干预健康影响因素": 84, "维护全生命周期健康": 80, "当年完成率": 77.9411764706, "总体完成率": 92.6470588235, "平均完成月数": 6.9841269841, "发文联合率": 32.2033898305, "平均协作规模": 2.1610169492, "参与部门": 58 },
+      { "年份": "2023年", "健康中国建设发展测度指数": 81.5569409048, "政策数量": 81.9258155176, "政策质量": 97.3474325483, "政策网络": 77.4844711643, "防控重大疾病": 59, "方位干预健康影响因素": 68, "维护生命周期健康": 74, "当年完成率": 84.0579710145, "总体完成率": 92.7536231884, "平均完成月数": 4.890625, "发文联合率": 41.5637860082, "平均协作规模": 2.658436214, "参与部门": 62 }
     ];
 
     // 页面加载完成后初始化
@@ -293,7 +293,7 @@
               content += `平均完成月数: ${yearData["平均完成月数"].toFixed(2)}月<br/>`;
             }
 
-            if (type === '协同机制') {
+            if (type === '政策网络') {
               content += `发文联合率: ${yearData["发文联合率"].toFixed(2)}%<br/>`;
               content += `平均协作规模: ${yearData["平均协作规模"].toFixed(2)}<br/>`;
               content += `参与部门: ${yearData["参与部门"]}`;
