--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
       <li>
 
         <div class="boxall" style="height: 100%">
-          <div class="alltitle">政策树
-            <div class="pulll_right">
+          <div class="alltitle">评价指标
+            <!-- <div class="pulll_right">
               <a href="javascript:void(0)" class="active">健康中国政策体系</a>
-            </div>
+            </div> -->
           </div>
           <!-- <div class="boxnav" id="policyTree"></div> -->
           <div class="boxnav">
