Evaluation template finished

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
 
       </li>
-      <li>
+      <li id="province-dimension">
         <div style="position: relative">
           <div class="barnav">
 
@@ -109,7 +109,7 @@
       </li>
       <li>
 
-        <div class="boxall" style="height: calc(50% - .15rem)">
+        <div class="boxall" id="department-dimension" style="height: calc(50% - .15rem)">
           <div class="alltitle">部门维度
             <div class="pulll_right sebtn department-btn">
               <a href="javascript:void(0)" class="active" onclick="switchDepartmentView('2019')">2019</a>
@@ -124,7 +124,7 @@
 
           <div class="boxfoot"></div>
         </div>
-        <div class="boxall" style="height: calc(50% - .15rem)">
+        <div class="boxall" id="action-dimension" style="height: calc(50% - .15rem)">
           <div class="alltitle">行动维度
             <div class="pulll_right sebtn action-btn-container"
               style="width: 300px; overflow-x: auto; white-space: nowrap;">
