--- a/index.html
+++ b/index.html
@@ -403,9 +403,9 @@
       // 根据不同类型更新饼图
       if (type === '政策数量') {
         // 使用全局函数
-        window.updateBt01('全方位干预健康影响因素领域发文量（件）', 68, 100);
-        window.updateBt02('维护全生命周期健康领域发文量（件）', 74, 100);
-        window.updateBt03('防控重大疾病领域发文量（件）', 59, 100);
+        window.updateBt01('全方位干预健康影响因素领域\n发文量（件）', 68, 100);
+        window.updateBt02('维护全生命周期健康领域\n发文量（件）', 74, 100);
+        window.updateBt03('防控重大疾病领域\n发文量（件）', 59, 100);
       } else if (type === '政策质量') {
         window.updateBt01('当年完成率（%）', 84.06, 100);
         window.updateBt02('总体完成率（%）', 92.75, 100);
