--- a/index.html
+++ b/index.html
@@ -601,6 +601,28 @@
         departmentChart.clear();
         departmentChart.setOption(getDepartmentOption(year));
       }
+
+      if (year === '2019') {
+        window.updateBt01('健康中国建设发展指数', 71.2);
+        window.updateBt02('健康中国建设发展指数', 69.9);
+        window.updateBt03('健康中国建设发展指数', 73.4);
+      } else if (year === '2020') {
+        window.updateBt01('健康中国建设发展指数', 82.5);
+        window.updateBt02('健康中国建设发展指数', 78.3);
+        window.updateBt03('健康中国建设发展指数', 65.8);
+      } else if (year === '2021') {
+        window.updateBt01('健康中国建设发展指数', 88.6);
+        window.updateBt02('健康中国建设发展指数', 92.1);
+        window.updateBt03('健康中国建设发展指数', 85.7);
+      } else if (year === '2022') {
+        window.updateBt01('健康中国建设发展指数', 92.1);
+        window.updateBt02('健康中国建设发展指数', 95.4);
+        window.updateBt03('健康中国建设发展指数', 90.3);
+      } else {
+        window.updateBt01('健康中国建设发展指数', 71.2);
+        window.updateBt02('健康中国建设发展指数', 69.9);
+        window.updateBt03('健康中国建设发展指数', 73.4);
+      }
     }
 
     // 将函数暴露到全局作用域
