行动维度饼图优化

--- a/index.html
+++ b/index.html
@@ -877,6 +877,40 @@
         actionChart.clear();
         actionChart.setOption(getActionOption(year));
       }
+
+      if (year === '2016') {
+        window.updateBt01('健康中国建设发展指数', 71.2);
+        window.updateBt02('健康中国建设发展指数', 69.9);
+        window.updateBt03('健康中国建设发展指数', 73.4);
+      } else if (year === '2017') {
+        window.updateBt01('健康中国建设发展指数', 92.1);
+        window.updateBt02('健康中国建设发展指数', 95.4);
+        window.updateBt03('健康中国建设发展指数', 90.3);
+      } else if (year === '2018') {
+        window.updateBt01('健康中国建设发展指数', 92.1);
+        window.updateBt02('健康中国建设发展指数', 95.4);
+        window.updateBt03('健康中国建设发展指数', 90.3);
+      } else if (year === '2019') {
+        window.updateBt01('健康中国建设发展指数', 92.1);
+        window.updateBt02('健康中国建设发展指数', 95.4);
+        window.updateBt03('健康中国建设发展指数', 90.3);
+      } else if (year === '2020') {
+        window.updateBt01('健康中国建设发展指数', 92.1);
+        window.updateBt02('健康中国建设发展指数', 95.4);
+        window.updateBt03('健康中国建设发展指数', 90.3);
+      } else if (year === '2021') {
+        window.updateBt01('健康中国建设发展指数', 92.1);
+        window.updateBt02('健康中国建设发展指数', 95.4);
+        window.updateBt03('健康中国建设发展指数', 90.3);
+      } else if (year === '2022') {
+        window.updateBt01('健康中国建设发展指数', 92.1);
+        window.updateBt02('健康中国建设发展指数', 95.4);
+        window.updateBt03('健康中国建设发展指数', 90.3);
+      } else {
+        window.updateBt01('健康中国建设发展指数', 71.2);
+        window.updateBt02('健康中国建设发展指数', 69.9);
+        window.updateBt03('健康中国建设发展指数', 73.4);
+      }
     }
 
     // 将函数暴露到全局作用域
